--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -114,6 +114,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkiverse.googlecloudservices</groupId>
+                <artifactId>quarkus-google-cloud-bigquery-storage</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.googlecloudservices</groupId>
                 <artifactId>quarkus-google-cloud-bigquery-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
